# viryatour

./: README.md
bash/: arg.sh  array.sh  awk.sh  bugs.sh  cp.sh  cp_part.sh  date.sh  doc.sh  echo.sh  exist.sh  expansion.sh  find.sh  ifs.sh  lastpipe.sh  line.sh  loop.sh  manipulate_str.sh  multiline_str.sh  opt.sh  pipe.sh  regex.sh  remove_char.sh  rsync.sh  set.sh  shift.sh  shtour  shtour_common.sh  string.sh  var.sh  var_au.sh  xterm.sh
cpp/: CMakeLists.txt  README.md  tour001.cpp  tour002.cpp  tour003.cpp  tour004.cpp  tour005.cpp  tour006.cpp  tour007.cpp  tour008.cpp  tour009.cpp  tour071.cpp  tour081.cpp  tour101.cpp  tour102.cpp  tour110.cpp  tour140.cpp  tour170.cpp  tour200.cpp  tour201.cpp  tour202.cpp  tour203.cpp  tour204.cpp
dart/: args.dart  basic.dart  helloworld.dart  stack_trace.dart
nodejs/: REAMDE.MD  test_args.js  test_array.js  test_assert.js  test_async.js  test_cls.js  test_date.js  test_env.js  test_event.js  test_fetch.js  test_fs_stat.js  test_func.js  test_hammer.js  test_iconv.js  test_json.js  test_map.js  test_multi_reg.js  test_multi_reg1.txt  test_multi_reg2.txt  test_multi_reg3.txt  test_not.js  test_null_in_func.js  test_obj.js  test_parameters.js  test_path.js  test_pkg.js  test_pkg_1.js  test_printf.js  test_promise.js  test_rgx.js  test_rgx2.js  test_str.js  test_str_split.js  test_url.js  test_var_defined.js  test_var_modification.js  test_vararg.js  test_yield.js
